--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -75,14 +75,12 @@ button:not(:disabled) {
   .navbar {
     width: 100%;
     height: 9%;
-  }
-  .slider {
-    padding-top: 100px;
+    position: static;
   }
   .navbar-brand img {
     width: 200px;
     height: 95px;
-    margin-top: -50px;
+    margin-top: -35px;
   }
 }
 .nav-icon i {
@@ -97,48 +95,106 @@ button:not(:disabled) {
   padding: 250px 0;
 }
 .banner h1 {
+  color: #fff;
   font-size: 45px;
   font-weight: 800;
   letter-spacing: 4px;
   text-align: center;
   text-transform: uppercase;
-  color: #fff;
 }
-#about {
-  padding-top: 80px;
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea,
+#contact button[type="submit"] {
+  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
 }
-#about h2 {
-  text-align: center;
-  font-family: Courgette;
-  font-size: 30px;
-  line-height: 1.2;
-  color: #d61c22;
+
+#contact {
+  background: #f9f9f9;
+  padding: 25px;
+  margin: 150px 0;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
-#about h3 {
-  text-align: center;
+#contact h3 {
   font-family: Poppins;
-  font-weight: 700;
-  font-size: 50px;
+  font-weight: 500;
+  font-size: 22px;
   line-height: 1.2;
   color: #222222;
   text-transform: uppercase;
-  letter-spacing: 6px;
-}
-#about p {
-  font-size: 18px;
-  letter-spacing: 2px;
-  line-height: 35px;
-  padding-bottom: 20px;
-}
-#about h4 {
-  text-align: center;
-  font-family: Poppins;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 1.2;
-  color: #ff0000;
-  text-transform: uppercase;
   letter-spacing: 3px;
+}
+
+fieldset {
+  border: medium none !important;
+  margin: 0 0 10px;
+  min-width: 100%;
+  padding: 0;
+  width: 100%;
+}
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  background: #fff;
+  margin: 0 0 5px;
+  padding: 10px;
+}
+#contact input[type="text"]:hover,
+#contact input[type="email"]:hover,
+#contact input[type="tel"]:hover,
+#contact input[type="url"]:hover,
+#contact textarea:hover {
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -moz-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+  border: 1px solid #aaa;
+}
+#contact textarea {
+  height: 100px;
+  max-width: 100%;
+  resize: none;
+}
+#contact button[type="submit"] {
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  background: #000;
+  color: #fff;
+  margin: 0 0 5px;
+  padding: 10px;
+  font-size: 15px;
+}
+#contact button[type="submit"]:hover {
+  background: #d61c22;
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+#contact button[type="submit"]:active {
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+#contact input:focus,
+#contact textarea:focus {
+  outline: 0;
+  border: 1px solid #aaa;
+}
+::-webkit-input-placeholder {
+  color: #888;
+}
+:-moz-placeholder {
+  color: #888;
+}
+::-moz-placeholder {
+  color: #888;
+}
+:-ms-input-placeholder {
+  color: #888;
 }
 footer {
   background: rgb(33, 37, 41);
