--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -75,14 +75,12 @@ button:not(:disabled) {
   .navbar {
     width: 100%;
     height: 9%;
-  }
-  .slider {
-    padding-top: 100px;
+    position: static;
   }
   .navbar-brand img {
     width: 200px;
     height: 95px;
-    margin-top: -50px;
+    margin-top: -35px;
   }
 }
 .nav-icon i {
@@ -97,49 +95,70 @@ button:not(:disabled) {
   padding: 250px 0;
 }
 .banner h1 {
+  color: #fff;
   font-size: 45px;
   font-weight: 800;
   letter-spacing: 4px;
   text-align: center;
   text-transform: uppercase;
-  color: #fff;
 }
-#about {
+.gallery {
   padding-top: 80px;
 }
-#about h2 {
-  text-align: center;
-  font-family: Courgette;
-  font-size: 30px;
-  line-height: 1.2;
-  color: #d61c22;
+.gallery {
+  display: block;
+  overflow: hidden;
+  position: relative;
 }
-#about h3 {
-  text-align: center;
-  font-family: Poppins;
-  font-weight: 700;
-  font-size: 50px;
-  line-height: 1.2;
-  color: #222222;
-  text-transform: uppercase;
-  letter-spacing: 6px;
+.gallery-img img {
+  width: 100%;
 }
-#about p {
-  font-size: 18px;
-  letter-spacing: 2px;
-  line-height: 35px;
-  padding-bottom: 20px;
+.gallery-img {
+  width: 100%;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  vertical-align: middle;
 }
-#about h4 {
-  text-align: center;
-  font-family: Poppins;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 1.2;
-  color: #ff0000;
-  text-transform: uppercase;
-  letter-spacing: 3px;
+.gallery-img:hover {
+  -webkit-transform: scale(1.2); /* Safari and Chrome */
+  -moz-transform: scale(1.2); /* Firefox */
+  -ms-transform: scale(1.2); /* IE 9 */
+  -o-transform: scale(1.2); /* Opera */
+  transform: scale(1.2);
+  transition: all 0.6s;
 }
+.img-overly {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(255, 9, 22, 0.58);
+  transition-duration: 1s;
+  opacity: 0;
+}
+.img-overly i {
+  position: absolute;
+  left: 42%;
+  top: 40%;
+  font-size: 22px;
+  background: #fff;
+  color: #000;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  z-index: 1;
+  padding-top: 20px;
+  padding-left: 20px;
+}
+.img-overly:hover {
+  opacity: 1;
+}
+
 footer {
   background: rgb(33, 37, 41);
   color: #999999;
