--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,7 @@
     - Footer
     - Media Queries   */
 /* !genaral */
-@import url("https://fonts.googleapis.com/css2?family=Explora&family=Lato:wght@700;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Explora&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Courgette&family=Montserrat:ital,wght@0,100;0,200;1,100&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -72,12 +71,12 @@ p {
   color: #d61c22 !important;
 }
 .nav-menu ul li a {
-  color: #323232 !important;
+  color: #000 !important;
   text-transform: uppercase;
-  margin-left: 65px;
-  font-size: 16px;
-  font-weight: lighter;
-  font-family: monospace;
+  margin-left: 30px;
+  font-weight: 400;
+  font-size: 14px;
+  font-family: Montserrat;
 }
 [type="button"]:not(:disabled),
 [type="reset"]:not(:disabled),
@@ -97,18 +96,16 @@ button:not(:disabled) {
   .navbar {
     width: 100%;
     height: 9%;
-  }
-  .slider {
-    padding-top: 100px;
+    position: static;
   }
   .navbar-brand img {
     width: 200px;
     height: 95px;
-    margin-top: -50px;
+    margin-top: -35px;
   }
 }
 .nav-icon i {
-  color: #323232;
+  color: #000;
   margin-left: 20px;
 }
 .nav-icon i:hover {
