--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -75,14 +75,12 @@ button:not(:disabled) {
   .navbar {
     width: 100%;
     height: 9%;
-  }
-  .slider {
-    padding-top: 100px;
+    position: static;
   }
   .navbar-brand img {
     width: 200px;
     height: 95px;
-    margin-top: -50px;
+    margin-top: -35px;
   }
 }
 .nav-icon i {
