--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -30,13 +30,13 @@ a {
   max-width: 1200px;
 }
 .navbar {
-  background-color: #f9f5f5;
-  opacity: 0.8;
   position: fixed;
   width: 100%;
   height: 12%;
-  z-index: 1;
+  background-color: #f9f5f5;
   --bs-navbar-padding-y: 0;
+  z-index: 1;
+  opacity: 0.8;
 }
 .navbar-brand img {
   width: 200px;
@@ -50,12 +50,12 @@ a {
   color: #d61c22 !important;
 }
 .nav-menu ul li a {
-  color: #000 !important;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  color: #09b529!important;
   text-transform: uppercase;
   margin-left: 30px;
-  font-weight: 400;
-  font-size: 14px;
-  font-family: Montserrat;
 }
 [type="button"]:not(:disabled),
 [type="reset"]:not(:disabled),
@@ -73,9 +73,9 @@ button:not(:disabled) {
 }
 @media (max-width: 576px) {
   .navbar {
+    position: static;
     width: 100%;
     height: 9%;
-    position: static;
   }
   .navbar-brand img {
     width: 200px;
@@ -95,7 +95,7 @@ button:not(:disabled) {
   padding: 240px 0;
 }
 .banner h1 {
-  color: #fff;
+  color: #d61c22;
   font-size: 45px;
   font-weight: 800;
   letter-spacing: 4px;
@@ -128,11 +128,11 @@ button:not(:disabled) {
 }
 
 fieldset {
+  width: 100%;
   border: medium none !important;
   margin: 0 0 10px;
   min-width: 100%;
   padding: 0;
-  width: 100%;
 }
 #contact input[type="text"],
 #contact input[type="email"],
@@ -164,14 +164,15 @@ fieldset {
   cursor: pointer;
   width: 100%;
   border: none;
-  background: #000;
-  color: #fff;
+  background: #09b529;
+  color: #d61c22;
   margin: 0 0 5px;
   padding: 10px;
   font-size: 15px;
 }
 #contact button[type="submit"]:hover {
   background: #d61c22;
+  color: #09b529;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out;
@@ -221,8 +222,8 @@ footer h6 {
 }
 .last {
   background: #000;
+  color: #09b529;
   padding: 30px 0;
-  color: #fff;
 }
 .last-icon-text i:hover {
   color: #d61c22;
