--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -50,12 +50,12 @@ a {
   color: #d61c22 !important;
 }
 .nav-menu ul li a {
-  color: #000 !important;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  color: #09b529!important;
   text-transform: uppercase;
   margin-left: 30px;
-  font-weight: 400;
-  font-size: 14px;
-  font-family: Montserrat;
 }
 [type="button"]:not(:disabled),
 [type="reset"]:not(:disabled),
@@ -73,9 +73,9 @@ button:not(:disabled) {
 }
 @media (max-width: 576px) {
   .navbar {
+    position: static;
     width: 100%;
     height: 9%;
-    position: static;
   }
   .navbar-brand img {
     width: 200px;
@@ -95,12 +95,12 @@ button:not(:disabled) {
   padding: 240px 0;
 }
 .banner h1 {
-  color: #fff;
   font-size: 45px;
   font-weight: 800;
   letter-spacing: 4px;
   text-align: center;
   text-transform: uppercase;
+  color: #d61c22;
 }
 .gallery-main {
   padding-top: 80px;
@@ -145,20 +145,19 @@ button:not(:disabled) {
   position: absolute;
   left: 42%;
   top: 40%;
-  font-size: 22px;
-  background: #fff;
-  color: #000;
   height: 60px;
   width: 60px;
   border-radius: 50%;
-  z-index: 1;
+  font-size: 22px;
+  background: #fff;
+  color: #000;
   padding-top: 20px;
   padding-left: 20px;
+  z-index: 1;
 }
 .img-overly:hover {
   opacity: 1;
 }
-
 footer {
   background: rgb(33, 37, 41);
   color: #999999;
@@ -169,8 +168,8 @@ footer h3 {
   font-size: 25px;
   font-weight: 600;
   letter-spacing: 2px;
-  color: #d61c22;
   padding-bottom: 30px;
+  color: #d61c22; 
 }
 footer p {
   font-size: 18px;
@@ -184,8 +183,8 @@ footer h6 {
 }
 .last {
   background: #000;
+  color: #09b529;
   padding: 30px 0;
-  color: #fff;
 }
 .last-icon-text i:hover {
   color: #d61c22;
