--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -50,12 +50,12 @@ a {
   color: #d61c22 !important;
 }
 .nav-menu ul li a {
-  color: #000 !important;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  color: #09b529!important;
   text-transform: uppercase;
   margin-left: 30px;
-  font-weight: 400;
-  font-size: 14px;
-  font-family: Montserrat;
 }
 [type="button"]:not(:disabled),
 [type="reset"]:not(:disabled),
@@ -73,9 +73,9 @@ button:not(:disabled) {
 }
 @media (max-width: 576px) {
   .navbar {
+    position: static;
     width: 100%;
     height: 9%;
-    position: static;
   }
   .navbar-brand img {
     width: 200px;
@@ -95,12 +95,12 @@ button:not(:disabled) {
   padding: 240px 0;
 }
 .banner h1 {
-  color: #fff;
   font-size: 45px;
   font-weight: 800;
   letter-spacing: 4px;
   text-align: center;
   text-transform: uppercase;
+  color: #d61c22;
 }
 #about {
   padding-top: 80px;
@@ -118,7 +118,7 @@ button:not(:disabled) {
   font-weight: 700;
   font-size: 50px;
   line-height: 1.2;
-  color: #222222;
+  color: #09b529;
   text-transform: uppercase;
   letter-spacing: 6px;
 }
@@ -163,8 +163,8 @@ footer h6 {
 }
 .last {
   background: #000;
+  color: #09b529;
   padding: 30px 0;
-  color: #fff;
 }
 .last-icon-text i:hover {
   color: #d61c22;
