--- a/assets/css/soup.css
+++ b/assets/css/soup.css
@@ -50,12 +50,12 @@ a {
   color: #d61c22 !important;
 }
 .nav-menu ul li a {
-  color: #000 !important;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  color: #09b529!important;
   text-transform: uppercase;
   margin-left: 30px;
-  font-weight: 400;
-  font-size: 14px;
-  font-family: Montserrat;
 }
 [type="button"]:not(:disabled),
 [type="reset"]:not(:disabled),
@@ -73,9 +73,9 @@ button:not(:disabled) {
 }
 @media (max-width: 576px) {
   .navbar {
+    position: static;
     width: 100%;
     height: 9%;
-    position: static;
   }
   .navbar-brand img {
     width: 200px;
@@ -95,7 +95,7 @@ button:not(:disabled) {
   padding: 240px 0;
 }
 .banner h1 {
-  color: #fff;
+  color: #d61c22;
   font-size: 45px;
   font-weight: 800;
   letter-spacing: 4px;
@@ -115,28 +115,28 @@ button:not(:disabled) {
 }
 #soup h2 {
   text-align: center;
-  color: #d61c22;
   font-size: 30px;
   letter-spacing: 2px;
+  color: #09b529;
 }
 #soup h4 {
   font-family: Poppins;
-  font-weight: 300;
   font-size: 18px;
-  color: #333333;
+  font-weight: 300;
   line-height: 1.4;
-  text-transform: uppercase;
   letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #333333;
 }
 #soup h4:hover {
   color: #d61c22;
 }
 #soup p {
   font-family: Montserrat;
-  font-weight: 400;
   font-size: 13px;
-  color: #666666;
+  font-weight: 400;
   line-height: 1.7;
+  color: #666666;
 }
 .right h4 {
   padding-bottom: 40px;
@@ -166,8 +166,8 @@ footer h6 {
 }
 .last {
   background: #000;
+  color: #09b529;
   padding: 30px 0;
-  color: #fff;
 }
 .last-icon-text i:hover {
   color: #d61c22;
