--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,12 +71,12 @@ p {
   color: #d61c22 !important;
 }
 .nav-menu ul li a {
-  color: #000 !important;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  color: #09b529!important;
   text-transform: uppercase;
   margin-left: 30px;
-  font-weight: 400;
-  font-size: 14px;
-  font-family: Montserrat;
 }
 [type="button"]:not(:disabled),
 [type="reset"]:not(:disabled),
@@ -94,9 +94,9 @@ button:not(:disabled) {
 }
 @media (max-width: 576px) {
   .navbar {
+    position: static;
     width: 100%;
     height: 9%;
-    position: static;
   }
   .navbar-brand img {
     width: 200px;
@@ -109,7 +109,7 @@ button:not(:disabled) {
   margin-left: 20px;
 }
 .nav-icon i:hover {
-  color: #d61c22 !important;
+  color: #d61c22!important;
 }
 #menu {
   padding-top: 50px;
@@ -128,7 +128,7 @@ button:not(:disabled) {
   font-weight: 700;
   font-size: 50px;
   line-height: 1.2;
-  color: #222222;
+  color: #09b529;
   text-transform: uppercase;
   letter-spacing: 10px;
   word-spacing: 8px;
@@ -158,32 +158,32 @@ button:not(:disabled) {
 }
 .btn-2 {
   background-color: white;
-  border-radius: 10px;
-  opacity: 0.7;
+  text-align: center;
   width: 200px;
   height: 60px;
-  text-align: center;
+  border-radius: 10px;
   padding-top: 15px;
+  opacity: 0.7;
 }
 .btn-2:hover {
   background: #d61c22;
-  color: #ffff;
+  color: #09b529;
 }
 .image-text {
   position: absolute;
   top: 34%;
   left: 21%;
   font-family: Poppins;
-  font-weight: 500;
   font-size: 22px;
+  font-weight: 500;
   color: #333333;
   text-transform: uppercase;
   letter-spacing: 3px;
 }
 .left{
   display: inline-block;
-  overflow: hidden;
   width: 100%;
+  overflow: hidden;
 }
 .img-left {
   padding-bottom: 20px;
@@ -199,7 +199,7 @@ button:not(:disabled) {
   font-weight: 700;
   font-size: 50px;
   line-height: 1.2;
-  color: #222222;
+  color: #09b529;
   text-transform: uppercase;
   letter-spacing: 6px;
 }
@@ -211,9 +211,9 @@ button:not(:disabled) {
 }
 .read-more {
   font-family: Montserrat;
-  font-weight: 400;
   font-size: 12px;
-  color: #222222;
+  font-weight: 400;
+  color: #09b529;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
@@ -227,8 +227,8 @@ button:not(:disabled) {
 }
 .about-image img {
   width: 370px;
-  height: 370px;
   max-width: 100%;
+  height: 370px;
 }
 .about-image img:hover {
   -webkit-transform: scale(1.2); /* Safari and Chrome */
@@ -256,10 +256,10 @@ button:not(:disabled) {
 }
 .bg-text h3 {
   font-family: Poppins;
-  font-weight: 700;
   font-size: 50px;
+  font-weight: 700;
   line-height: 1.2;
-  color: white;
+  color: #09b529;
   text-transform: uppercase;
   letter-spacing: 10px;
   word-spacing: 6px;
@@ -270,9 +270,9 @@ button:not(:disabled) {
 }
 .intro-img {
   display: inline-block;
-  overflow: hidden;
-  border-radius: 10px;
   width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
 }
 .intro-img img {
   width: 100%;
@@ -293,9 +293,9 @@ button:not(:disabled) {
 }
 .intro-text h4 {
   font-family: Poppins;
-  font-weight: 500;
   font-size: 22px;
-  color: #333333;
+  font-weight: 500;
+  color: #09b529;
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-top: 30px;
@@ -306,8 +306,8 @@ button:not(:disabled) {
 }
 .intro-text p {
   font-family: Montserrat;
-  font-weight: 400;
   font-size: 15px;
+  font-weight: 400;
   line-height: 1.7;
   color: #666666;
   margin-top: 20px;
@@ -328,10 +328,10 @@ button:not(:disabled) {
 }
 .offer-header h3 {
   font-family: Poppins;
-  font-weight: 700;
   font-size: 50px;
+  font-weight: 700;
   line-height: 1.2;
-  color: white;
+  color: #fff;
   text-transform: uppercase;
   letter-spacing: 6px;
   word-spacing: 6px;
@@ -363,29 +363,29 @@ button:not(:disabled) {
   }
 }
 .offer-text {
-  background-color: white;
   width: 50%;
   min-height: 390px;
+  background-color: white;
   margin-top: 30px;
 }
 .offer-text h4 {
   font-family: Poppins;
-  font-weight: 500;
   font-size: 22px;
+  font-weight: 500;
   line-height: 1.2;
-  color: #222222;
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-top: 40px;
   margin-bottom: 65px;
+  color: #09b529;
 }
 .offer-text p {
   max-width: 513px;
-  margin: 0 auto;
   font-family: Montserrat;
   font-weight: 400;
   font-size: 15px;
   line-height: 1.7;
+  margin: 0 auto;
   color: #666666;
 }
 #book-table {
@@ -417,14 +417,16 @@ button:not(:disabled) {
   text-align: center;
   margin: 0 0 40px 0;
 }
-.form-text p {
-  color: #d61c22;
+.form-text span {
+  font-family: Courgette;
   font-size: 30px;
-  letter-spacing: 2px;
+  line-height: 1.2;
+  color: #d61c22;
 }
 .form-text h2 {
   font-size: 40px;
   font-weight: 900;
+  color: #09b529;
   letter-spacing: 3px;
   margin-bottom: 20px;
   text-transform: uppercase;
@@ -449,22 +451,22 @@ button:not(:disabled) {
 }
 .main-form div select {
   font-family: Montserrat;
-  font-weight: 400;
   font-size: 14px;
-  color: #666666;
-  background: #fff;
+  font-weight: 400;
   width: 100%;
   border: 1px solid #d61c22;
   border-radius: 10px;
   outline: none;
   padding: 3px 0 3px 10px;
   margin-top: 10px;
+  background: #fff;
+  color: #666666;
 }
 .main-form div span {
   width: 100%;
   font-family: Montserrat;
-  font-weight: 400;
   font-size: 15px;
+  font-weight: 400;
   color: #555555;
 }
 #submit {
@@ -481,7 +483,7 @@ button:not(:disabled) {
 }
 #submit input:hover {
   background-color: #d61c22 !important;
-  color: #fff !important;
+  color: #09b529 !important;
 }
 #submit input:active {
   font-size: 19px;
@@ -524,10 +526,10 @@ button:not(:disabled) {
 }
 .news-header h3 {
   font-family: Poppins;
-  font-weight: 700;
   font-size: 50px;
+  font-weight: 700;
   line-height: 1.2;
-  color: #222222;
+  color: #09b529;
   text-transform: uppercase;
   letter-spacing: 10px;
   word-spacing: 8px;
@@ -542,8 +544,8 @@ footer h3 {
   font-size: 25px;
   font-weight: 600;
   letter-spacing: 2px;
-  color: #d61c22;
   padding-bottom: 30px;
+  color: #d61c22;
 }
 footer p {
   font-size: 18px;
@@ -557,8 +559,11 @@ footer h6 {
 }
 .last {
   background: #000;
+  color: #09b529;
   padding: 30px 0;
-  color: #fff;
+}
+.last p{
+  color: #09b529;
 }
 .last-icon-text i:hover {
   color: #d61c22;
