--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,9 +72,9 @@ p {
 }
 .nav-menu ul li a {
   font-family: Montserrat;
-  font-size: 14px;
-  font-weight: 400;
-  color: #09b529!important;
+  font-size: 15px;
+  font-weight: 900;
+  color: #00aa1f!important;
   text-transform: uppercase;
   margin-left: 30px;
 }
