--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -50,12 +50,12 @@ a {
   color: #d61c22 !important;
 }
 .nav-menu ul li a {
-  color: #09b529 !important;
+  font-family: Montserrat;
   text-transform: uppercase;
   margin-left: 30px;
-  font-weight: 400;
-  font-size: 14px;
-  font-family: Montserrat;
+  font-size: 15px;
+  font-weight: 900;
+  color: #00aa1f!important;
 }
 [type="button"]:not(:disabled),
 [type="reset"]:not(:disabled),
